== SportsPress Changelog ==

= 2.6.8 =
* Feature - Ability to display matchday in event blocks.
* Feature - Add support for commenting on scheduled events.
* Feature - Option to filter birthdays widget by week.
* Feature - Option to filter events by competitive or friendly.
* Tweak - Display pin in venue map and link map to web version.
* Tweak - Add UK as alternate to GB in countries legacy list.
* Tweak - Remove duplicate teams from players.
* Tweak - Improve player assignment filtering for player lists.
* Fix - Animated countdowns when visitor and site are in a different timezones.

= 2.6.7 =
* Fix - Update Google Maps API endpoints.

= 2.6.6 =
* Fix - Apply reverse teams to frontend templates only.

= 2.6.5 =
* Tweak - Increase coverage of reverse teams option.
* Tweak - Improve sorting of leagues, positions, and seasons.
* Localization - Additional legacy country code for Greece.
* Fix - Broken post author select on certain pages.
* Fix - Google Calendar link protocol.

= 2.6.4 =
* Fix - Undefined variable notice in player list.

= 2.6.3 =
* Fix - Assign past teams during player import.
* Fix - Next team column displaying events furthest away.
* Fix - Add fallback array_replace function for PHP versions earlier than 5.3.
* Fix - Add fallback for web hosts that don't support multibyte PHP functions, causing blank player profiles.

= 2.6.2 =
* Fix - Newly added players from past and current team appearing in player lists.
* Fix - Player lists appearing empty without league, season, and team selected.

= 2.6.1 =
* Fix - Player lists with a team selected showing players from other teams.
* Fix - REST API endpoints not resolving for players.
* Fix - Empty system status page.

= 2.6 =
* Feature - Add custom details to events using event specs.
* Feature - Conditional equations for variables.
* Feature - Display the next opponent in league tables.
* Feature - Short name option added to teams.
* Feature - Automatic event titles using short name when available.