@@ -392,6 +392,9 @@ class SP_Post_types {
 						'search_items' 			=> __( 'Search', 'sportspress' ),
 						'not_found' 			=> __( 'No results found.', 'sportspress' ),
 						'not_found_in_trash' 	=> __( 'No results found.', 'sportspress' ),
+						'set_featured_image' 	=> __( 'Select Icon', 'sportspress' ),
+ 						'remove_featured_image' => __( 'Remove icon', 'sportspress' ),
+ 						'use_featured_image' 	=> __( 'Add icon', 'sportspress' ),
 					),
 					'public' 				=> false,
 					'show_ui' 				=> true,
