@@ -1,6 +1,7 @@
 == SportsPress Changelog ==
 
 = 2.6.8 =
+* Feature - Ability to add icons to player statistics.
 * Feature - Ability to display matchday in event blocks.
 * Feature - Add support for commenting on scheduled events.
 * Feature - Option to filter birthdays widget by week.
